--- a/build.gradle
+++ b/build.gradle
@@ -28,4 +28,18 @@ dependencies {
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'junit:junit:4.12'
+	testCompile('junit:junit:4.12'){
+		exclude group: 'org.hamcrest'
+	}
+	testCompile 'org.hamcrest:hamcrest-library:1.3'
 }
+
+test {
+	useJUnit()
+
+	maxHeapSize = '1G'
+}
+
+
+
