--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,11 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.main.allow-bean-definition-overriding=true
 
 spring.jpa.hibernate.ddl-auto = update
 
 # Enabling H2 Console localhost:8080/h2-console
 spring.h2.console.enabled=true
+
+debug=true
