--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb
 # spring.datasource.url=jdbc:h2:file:~/test;AUTO_SERVER=TRUE
 spring.datasource.url=jdbc:h2:file:~/test;
 spring.datasource.driverClassName=org.h2.Driver
