--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:file:~/test;
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -7,4 +7,3 @@ spring.main.allow-bean-definition-overriding=true
 spring.jpa.hibernate.ddl-auto=update
 # Enabling H2 Console localhost:8080/h2-console
 spring.h2.console.enabled=true
-# debug=true
