--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,10 @@ spring.jpa.hibernate.ddl-auto=update
 # Enabling H2 Console localhost:8080/h2-console
 spring.h2.console.enabled=true
 # debug=true
-
 server.require-ssl=false
+
+spring.jpa.show-sql=true
+logging.level.org.hibernate.sql=debug
+logging.level.org.springframework.jdbc.core.JdbcTemplate=debug
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
