Add condition for requiring SSL

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,3 +7,4 @@ spring.main.allow-bean-definition-overriding=true
 spring.jpa.hibernate.ddl-auto=update
 # Enabling H2 Console localhost:8080/h2-console
 spring.h2.console.enabled=true
+server.require-ssl=false
