--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.hibernate.ddl-auto=update
 # Enabling H2 Console localhost:8080/h2-console
 spring.h2.console.enabled=true
 # debug=true
+
+server.require-ssl=false
