--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,13 @@ buildscript {
     }
     repositories {
         mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath "gradle.plugin.org.kravemir.gradle.sass:GradleSassPlugin:1.2.2"
     }
 }
 
@@ -15,6 +19,7 @@ apply plugin: 'checkstyle'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'war'
+apply plugin: "org.kravemir.gradle.sass"
 
 group = 'dk.cngroup'
 version = '0.0.1-SNAPSHOT'
@@ -45,4 +50,11 @@ test {
     useJUnit()
 
     maxHeapSize = '1G'
+}
+
+sass {
+    main {
+        srcDir = file("$projectDir/src/main/sass")
+        outDir = file("$projectDir/src/main/resources/static/css")
+    }
 }
