--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 # debug=true
 server.require-ssl=false
+hibernate.search.default.directory_provider = filesystem
+hibernate.search.default.indexBase = /data/index/default
