--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-security'
     compile 'org.springframework.boot:spring-boot-starter-aop'
     compile group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.1'
+    compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.5'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'junit:junit:4.12'
     testCompile('junit:junit:4.12') {
