pridana podpora pro liquibase

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,12 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.main.allow-bean-definition-overriding=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 # Enabling H2 Console localhost:8080/h2-console
 spring.h2.console.enabled=true
 # debug=true
 server.require-ssl=false
 imageDirectory=/upload/images/
+
+spring.liquibase.change-log=classpath:db/db.changelog-master.xml
+spring.liquibase.enabled=true
