--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.4'
     compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.5'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+    compile("org.springframework.boot:spring-boot-starter-jdbc")
+    compile("org.liquibase:liquibase-core")
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'junit:junit:4.12'
