--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,22 @@
 buildscript {
     ext {
         springBootVersion = '2.1.2.RELEASE'
+        kotlinVersion = '1.3.50'
     }
     repositories {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlinVersion"
     }
 }
 
 apply plugin: 'java'
+apply plugin: 'groovy'
+apply plugin: 'kotlin'
+apply plugin: 'kotlin-spring'
 apply plugin: 'checkstyle'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
@@ -34,6 +40,7 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
     compile 'org.springframework.boot:spring-boot-starter-security'
     compile 'org.springframework.boot:spring-boot-starter-aop'
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
     compile group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.1'
     compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.4'
     compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.5'
@@ -44,6 +51,7 @@ dependencies {
     testCompile('junit:junit:4.12') {
         exclude group: 'org.hamcrest'
     }
+    testCompile "org.spockframework:spock-core:1.1-groovy-2.4-rc-2"
     testCompile 'org.hamcrest:hamcrest-library:1.3'
 }
 
